--- a/trunk/Data/Locales/de/appetizer.po
+++ b/trunk/Data/Locales/de/appetizer.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Appetizer\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-12-02 16:33+0000\n"
+"POT-Creation-Date: 2008-12-04 12:15+0000\n"
 "PO-Revision-Date: 2008-12-02 22:48+0100\n"
 "Last-Translator: Werner Künkel <w.kuenkel@t-online.de>\n"
 "Language-Team: Appetizer Project - Werner Künkel\n"
@@ -25,31 +25,24 @@ msgstr "Minimieren"
 msgid "Show"
 msgstr "Zeigen"
 
-#: ApplicationTrayIcon.cpp:40
-#: MainFrame.cpp:365
+#: ApplicationTrayIcon.cpp:40 MainFrame.cpp:363
 msgid "Eject drive"
 msgstr "Externes Laufwerk abmelden"
 
-#: ApplicationTrayIcon.cpp:45
-#: MainFrame.cpp:833
-#: OptionPanel.cpp:154
+#: ApplicationTrayIcon.cpp:45 MainFrame.cpp:831 OptionPanel.cpp:154
 #: gui\ConfigDialog.cpp:55
 msgid "Configuration"
 msgstr "Einstellungen"
 
-#: ApplicationTrayIcon.cpp:51
-#: gui\TreeViewDialog.cpp:130
+#: ApplicationTrayIcon.cpp:51 gui\TreeViewDialog.cpp:130
 msgid "Close"
 msgstr "Schließen"
 
-#: FolderItem.cpp:467
-#: gui\TreeViewDialog.cpp:129
+#: FolderItem.cpp:467 gui\TreeViewDialog.cpp:129
 msgid "Organize shortcuts"
 msgstr "Neue Verknüpfung"
 
-#: FolderItem.cpp:632
-#: FolderItem.cpp:639
-#: FolderItem.cpp:662
+#: FolderItem.cpp:632 FolderItem.cpp:639 FolderItem.cpp:662
 #, c-format
 msgid "This file doesn't exist or has been deleted (Error %s)"
 msgstr "Die gesuchte Datei fehlt (Fehler%s)"
@@ -62,38 +55,31 @@ msgstr "Kategorie"
 msgid "Unnamed"
 msgstr "Unbenannt"
 
-#: FolderItem.cpp:1083
-#: IconPanel.cpp:138
+#: FolderItem.cpp:1083 IconPanel.cpp:138
 msgid "Control Panel"
 msgstr "Systemsteuerung"
 
-#: FolderItem.cpp:1085
-#: IconPanel.cpp:139
+#: FolderItem.cpp:1085 IconPanel.cpp:139
 msgid "My Computer"
 msgstr "Arbeitsplatz"
 
-#: FolderItem.cpp:1087
-#: IconPanel.cpp:140
+#: FolderItem.cpp:1087 IconPanel.cpp:140
 msgid "My Network Places"
 msgstr "Netzwerkumgebung"
 
-#: FolderItem.cpp:1089
-#: IconPanel.cpp:141
+#: FolderItem.cpp:1089 IconPanel.cpp:141
 msgid "Recycle Bin"
 msgstr "Papierkorb"
 
-#: FolderItem.cpp:1091
-#: IconPanel.cpp:142
+#: FolderItem.cpp:1091 IconPanel.cpp:142
 msgid "Show Desktop"
 msgstr "Desktop zeigen"
 
-#: FolderItem.cpp:1093
-#: IconPanel.cpp:143
+#: FolderItem.cpp:1093 IconPanel.cpp:143
 msgid "Windows Explorer"
 msgstr "Windows Explorer"
 
-#: FolderItem.cpp:1095
-#: IconPanel.cpp:144
+#: FolderItem.cpp:1095 IconPanel.cpp:144
 msgid "Search"
 msgstr "Suche"
 
@@ -101,8 +87,7 @@ msgstr "Suche"
 msgid "Current Drive"
 msgstr "Aktuelles Laufwerk"
 
-#: FolderItemRenderer.cpp:152
-#: gui\TreeViewDialog.cpp:106
+#: FolderItemRenderer.cpp:152 gui\TreeViewDialog.cpp:106
 msgid "Remove..."
 msgstr "Verknüpfung löschen..."
 
@@ -114,13 +99,11 @@ msgstr "Zur Schnellstart-Gruppe hinzufügen"
 msgid "Organize group shortcuts"
 msgstr "Kategorien verwalten"
 
-#: FolderItemRenderer.cpp:171
-#: gui\TreeViewDialog.cpp:111
+#: FolderItemRenderer.cpp:171 gui\TreeViewDialog.cpp:111
 msgid "Properties"
 msgstr "Eigenschaften"
 
-#: IconPanel.cpp:118
-#: OptionPanel.cpp:153
+#: IconPanel.cpp:118 OptionPanel.cpp:153
 msgid "New shortcut..."
 msgstr "Neue Verknüpfung"
 
@@ -132,51 +115,51 @@ msgstr "Neue Kategorie"
 msgid "Add special item"
 msgstr "Windowsfunktionen einbinden"
 
-#: main.cpp:62
+#: main.cpp:65
 msgid "Uses user data directory to save settings."
 msgstr "Einstellungen im Ordner \"Anwendungsdaten\" speichern."
 
-#: main.cpp:63
+#: main.cpp:66
 msgid "Sets user data path (-u will be ignored)"
 msgstr "Pfad für die Sicherung der Einstellungen festlegen (-u wird ignoriert)"
 
-#: main.cpp:64
+#: main.cpp:67
 msgid "Displays the log window (useful for debugging)"
 msgstr "Zeigt das log Fenster (für Fehlerkorrektur)"
 
-#: main.cpp:65
+#: main.cpp:68
 msgid "Displays this help message"
 msgstr "Zeigt die Hilfsmeldung"
 
-#: main.cpp:108
+#: main.cpp:107
 msgid "Could not initialize locale."
 msgstr "Sprachpaket nicht anwendbar"
 
-#: main.cpp:207
+#: main.cpp:206
 msgid "Large"
 msgstr "Groß"
 
-#: main.cpp:208
+#: main.cpp:207
 msgid "Extra Large (XP and above)"
 msgstr "Sehr groß (XP und höher)"
 
-#: main.cpp:209
+#: main.cpp:208
 msgid "Jumbo (Vista and above)"
 msgstr "Jumbo (Vista und höher)"
 
-#: main.cpp:213
+#: main.cpp:212
 msgid "Small"
 msgstr "Klein"
 
-#: main.cpp:304
+#: main.cpp:303
 msgid "Could not get update information"
 msgstr "Keine Information zu neuen Versionen erhältlich..."
 
-#: main.cpp:318
+#: main.cpp:317
 msgid "You have the latest version."
 msgstr "Sie haben die aktuelle Version."
 
-#: main.cpp:325
+#: main.cpp:324
 #, c-format
 msgid ""
 "A new version is available!\n"
@@ -195,19 +178,23 @@ msgstr ""
 "\n"
 "Möchten Sie sie jetzt herunterladen"
 
-#: main.cpp:331
+#: main.cpp:330
 msgid "Error launching web browser"
 msgstr "Browser startet nicht"
 
-#: MainFrame.cpp:214
-msgid "There was an error registering the hot key. Another application may already have registered it."
-msgstr "Es ist ein Fehler bei der Registrierung des Tastenkürzels aufgetreten. Eine andere Anwendung könnte sie schon verwenden."
+#: MainFrame.cpp:212
+msgid ""
+"There was an error registering the hot key. Another application may already "
+"have registered it."
+msgstr ""
+"Es ist ein Fehler bei der Registrierung des Tastenkürzels aufgetreten. Eine "
+"andere Anwendung könnte sie schon verwenden."
 
-#: MainFrame.cpp:364
+#: MainFrame.cpp:362
 msgid "Minimize to tray"
 msgstr "Schließen"
 
-#: MainFrame.cpp:833
+#: MainFrame.cpp:831
 #, c-format
 msgid ""
 "%s is now going to be minimized to the System Tray.\n"
@@ -218,14 +205,11 @@ msgstr ""
 "\n"
 "Sie können diese Option im  '%s' Fenster unter '%s' wieder ändern"
 
-#: MainFrame.cpp:833
-#: gui\ConfigDialog.cpp:58
+#: MainFrame.cpp:831 gui\ConfigDialog.cpp:58
 msgid "Operations"
 msgstr "Extras"
 
-#: MainFrame.cpp:833
-#: utilities\Utilities.cpp:73
-#: utilities\Utilities.cpp:261
+#: MainFrame.cpp:831 utilities\Utilities.cpp:73 utilities\Utilities.cpp:261
 msgid "Don't show this message again"
 msgstr "Diese Nachricht nicht wieder zeigen"
 
@@ -245,8 +229,7 @@ msgstr "Warnhinweis"
 msgid "Confirmation"
 msgstr "Bestätigung"
 
-#: OptionPanel.cpp:152
-#: gui\ConfigDialog.cpp:63
+#: OptionPanel.cpp:152 gui\ConfigDialog.cpp:63
 msgid "Help"
 msgstr "Hilfe"
 
@@ -254,8 +237,7 @@ msgstr "Hilfe"
 msgid "Multi-launch"
 msgstr "Schnellstart-Gruppe"
 
-#: OptionPanel.cpp:156
-#: gui\ImportWizardDialog.cpp:24
+#: OptionPanel.cpp:156 gui\ImportWizardDialog.cpp:24
 msgid "Import shortcuts"
 msgstr "Verknüpfungen importieren"
 
@@ -267,15 +249,17 @@ msgstr "Hilfethemen"
 msgid "Get Support"
 msgstr "Online Hilfe"
 
-#: OptionPanel.cpp:305
-#: gui\AboutDialog.cpp:80
+#: OptionPanel.cpp:305 gui\AboutDialog.cpp:80
 #, c-format
 msgid "About %s..."
 msgstr "Über %s ..."
 
 #: OptionPanel.cpp:315
-msgid "The multilaunch group is currently empty. Do you wish to show the help topic about this feature?"
-msgstr "Die Schnellstart-Gruppe ist derzeit leer. Wollen Sie die Hilfe dazu ansehen?"
+msgid ""
+"The multilaunch group is currently empty. Do you wish to show the help topic "
+"about this feature?"
+msgstr ""
+"Die Schnellstart-Gruppe ist derzeit leer. Wollen Sie die Hilfe dazu ansehen?"
 
 #: PluginManager.cpp:41
 #, c-format
@@ -294,8 +278,11 @@ msgstr "Datei '%s' kann nicht erzeugt werden"
 
 #: PluginManager.cpp:82
 #, c-format
-msgid "The plugin has been installed successfully. It will be activated the next time %s is started"
-msgstr "Das Plugin wurde erfolgreich installiert. Zur Aktivierung %s neu starten"
+msgid ""
+"The plugin has been installed successfully. It will be activated the next "
+"time %s is started"
+msgstr ""
+"Das Plugin wurde erfolgreich installiert. Zur Aktivierung %s neu starten"
 
 #: Styles.cpp:68
 #, c-format
@@ -325,7 +312,8 @@ msgstr "Übersetzer: %s"
 
 #: gui\AboutDialog.cpp:64
 msgid "This software uses a number of open source libraries including:"
-msgstr "Diese Anwenwendung nutzt eine Anzahl quelloffener Programmbibliotheken:"
+msgstr ""
+"Diese Anwenwendung nutzt eine Anzahl quelloffener Programmbibliotheken:"
 
 #: gui\AboutDialog.cpp:66
 msgid "- Simpleini by Brodie Thiesfield"
@@ -340,8 +328,12 @@ msgid "- CStdString by Joe O'Leary"
 msgstr "- CStdString von Joe O'Leary"
 
 #: gui\AboutDialog.cpp:72
-msgid "- Lua by Roberto Ierusalimschy, Luiz Henrique de Figueiredo, and Waldemar Celes"
-msgstr "- Lua von Roberto Ierusalimschy, Luiz Henrique de Figueiredo, and Waldemar Celes"
+msgid ""
+"- Lua by Roberto Ierusalimschy, Luiz Henrique de Figueiredo, and Waldemar "
+"Celes"
+msgstr ""
+"- Lua von Roberto Ierusalimschy, Luiz Henrique de Figueiredo, and Waldemar "
+"Celes"
 
 #: gui\AboutDialog.cpp:74
 msgid "- zlib by Jean-Loup Gailly and Mark Adler"
@@ -363,10 +355,8 @@ msgstr "Über "
 msgid "License"
 msgstr "Lizenz"
 
-#: gui\AboutDialog.cpp:83
-#: gui\BetterMessageDialog.cpp:111
-#: gui\FileOrFolderDialog.cpp:111
-#: gui\IconDialog.cpp:99
+#: gui\AboutDialog.cpp:83 gui\BetterMessageDialog.cpp:111
+#: gui\FileOrFolderDialog.cpp:111 gui\IconDialog.cpp:99
 msgid "OK"
 msgstr "OK"
 
@@ -381,17 +371,30 @@ msgstr "Copyright © %s"
 
 #: gui\AboutDialog.cpp:89
 msgid ""
-"This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or any later version.\n"
+"This program is free software: you can redistribute it and/or modify it "
+"under the terms of the GNU General Public License as published by the Free "
+"Software Foundation, either version 3 of the License, or any later version.\n"
 "\n"
-"This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n"
+"This program is distributed in the hope that it will be useful, but WITHOUT "
+"ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or "
+"FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for "
+"more details.\n"
 "\n"
-"You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>."
+"You should have received a copy of the GNU General Public License along with "
+"this program.  If not, see <http://www.gnu.org/licenses/>."
 msgstr ""
-"Dieses Programm ist frei erhältlich: Sie können es weiterreichen und/oder verändern gemäß den Bestimmungen der GNU General Public License, veröffentlicht durch die Free Software Foundation, ab Version 3 aufwärts.\n"
+"Dieses Programm ist frei erhältlich: Sie können es weiterreichen und/oder "
+"verändern gemäß den Bestimmungen der GNU General Public License, "
+"veröffentlicht durch die Free Software Foundation, ab Version 3 aufwärts.\n"
 "\n"
-"Dieses Programm wird in der Hoffnung, dass es nütze, weitergegeben, allerdings UNTER AUSSCHLUSS JEGLICHER GEWÄHRLEISTUNG; insbesondere gilt dies für die Gewährleistung bei Mängeln in der allgemeinen und auf spezielle Aufgaben zugeschnittenen Gebrauchstauglichkeit. Für nähere Hinweise sehen Sie bitte in die GNU General Public License.\n"
+"Dieses Programm wird in der Hoffnung, dass es nütze, weitergegeben, "
+"allerdings UNTER AUSSCHLUSS JEGLICHER GEWÄHRLEISTUNG; insbesondere gilt dies "
+"für die Gewährleistung bei Mängeln in der allgemeinen und auf spezielle "
+"Aufgaben zugeschnittenen Gebrauchstauglichkeit. Für nähere Hinweise sehen "
+"Sie bitte in die GNU General Public License.\n"
 "\n"
-"Sollten Sie keine Kopie der GNU General Public License mit diesem Programm erhalten haben, finden Sie sie unter <http://www.gnu.org/licenses/>."
+"Sollten Sie keine Kopie der GNU General Public License mit diesem Programm "
+"erhalten haben, finden Sie sie unter <http://www.gnu.org/licenses/>."
 
 #: gui\AboutDialog.cpp:90
 msgid "Web:"
@@ -414,12 +417,9 @@ msgstr "OK"
 msgid "No"
 msgstr "Nein"
 
-#: gui\BetterMessageDialog.cpp:114
-#: gui\ConfigDialog.cpp:62
-#: gui\FileOrFolderDialog.cpp:112
-#: gui\IconDialog.cpp:100
-#: gui\ImportWizardDialog.cpp:79
-#: gui\ShortcutEditorDialog.cpp:43
+#: gui\BetterMessageDialog.cpp:114 gui\ConfigDialog.cpp:62
+#: gui\FileOrFolderDialog.cpp:112 gui\IconDialog.cpp:100
+#: gui\ImportWizardDialog.cpp:79 gui\ShortcutEditorDialog.cpp:43
 msgid "Cancel"
 msgstr "Abbrechen"
 
@@ -439,8 +439,7 @@ msgstr "Importieren"
 msgid "Plugins"
 msgstr "Plugins"
 
-#: gui\ConfigDialog.cpp:61
-#: gui\ShortcutEditorDialog.cpp:42
+#: gui\ConfigDialog.cpp:61 gui\ShortcutEditorDialog.cpp:42
 msgid "Save"
 msgstr "Speichern"
 
@@ -473,8 +472,7 @@ msgstr "Immer sichtbar"
 msgid "Allow only one instance of %s at a time"
 msgstr "Nur ein %sfenster zulassen"
 
-#: gui\ConfigDialog.cpp:198
-#: gui\ConfigDialog.cpp:685
+#: gui\ConfigDialog.cpp:198 gui\ConfigDialog.cpp:685
 msgid "Check for update"
 msgstr "Nach neuer Version suchen"
 
@@ -652,23 +650,29 @@ msgstr "Installieren..."
 
 #: gui\ConfigDialog.cpp:552
 #, c-format
-msgid "The changes made to the plugins will only be active the next time %s is started."
+msgid ""
+"The changes made to the plugins will only be active the next time %s is "
+"started."
 msgstr "Die Änderungen werden bei Neustart von %s wirksam."
 
 #: gui\ConfigDialog.cpp:612
 #, c-format
 msgid ""
-"By installing the autorun file on your removable drive, %s will start automatically when you insert your drive.\n"
+"By installing the autorun file on your removable drive, %s will start "
+"automatically when you insert your drive.\n"
 "\n"
 "Do you wish to continue?"
 msgstr ""
-"Nach Erstellen der \"Autorun\"-Datei auf dem externen Laufwerk wird %s automatisch nach dem Andocken starten.\n"
+"Nach Erstellen der \"Autorun\"-Datei auf dem externen Laufwerk wird %s "
+"automatisch nach dem Andocken starten.\n"
 "\n"
 "Wollen Sie fortfahren?"
 
 #: gui\ConfigDialog.cpp:615
 msgid "Could not install autorun file. Please try again."
-msgstr "Die \"Autorun\"-Datei konnte nicht erstellt werden. Bitte versuchen Sie es nochmals!"
+msgstr ""
+"Die \"Autorun\"-Datei konnte nicht erstellt werden. Bitte versuchen Sie es "
+"nochmals!"
 
 #: gui\ConfigDialog.cpp:617
 msgid "The autorun file has been installed successfully"
@@ -679,8 +683,7 @@ msgstr "Die \"Autorun\"-Datei wurde erstellt"
 msgid "%s Plugin Packages"
 msgstr "%s Plugins"
 
-#: gui\ConfigDialog.cpp:649
-#: gui\IconDialog.cpp:156
+#: gui\ConfigDialog.cpp:649 gui\IconDialog.cpp:156
 msgid "All files"
 msgstr "Alle Dateiarten"
 
@@ -693,8 +696,12 @@ msgid "Please wait..."
 msgstr "Bitte warten..."
 
 #: gui\ConfigDialog.cpp:934
-msgid "Some of these changes will only be applied until after you restart the application."
-msgstr "Einige der vorgenommenen Änderungen werden erst nach Neustart des Programms wirksam."
+msgid ""
+"Some of these changes will only be applied until after you restart the "
+"application."
+msgstr ""
+"Einige der vorgenommenen Änderungen werden erst nach Neustart des Programms "
+"wirksam."
 
 #: gui\FileOrFolderDialog.cpp:76
 msgid "Loading tree..."
@@ -801,7 +808,8 @@ msgstr "Standard verwenden"
 
 #: gui\ShortcutEditorDialog.cpp:148
 msgid "The shorcut location doesn't exist. Do you wish to continue?"
-msgstr "Der Zielort für diese Verknüpfung existiert nicht. Möchten Sie fortfahren?"
+msgstr ""
+"Der Zielort für diese Verknüpfung existiert nicht. Möchten Sie fortfahren?"
 
 #, fuzzy
 #~ msgid "Loading: "
@@ -849,8 +857,9 @@ msgstr "Der Zielort für diese Verknüpfung existiert nicht. Möchten Sie fortfa
 #~ "- die Boost C++ Libraries und wxWidgets von den entsprechenden Autoren\n"
 #~ "\n"
 #~ "Dialogfenster wurden mit wxGlade von Alberto Griggio erstellt."
+
 #~ msgid "Select folder"
 #~ msgstr "Ordner auswählen"
+
 #~ msgid "Check for updateWait"
 #~ msgstr "Bitte warten..."
-
