--- a/trunk/Data/Help/en/appetizer_help.po
+++ b/trunk/Data/Help/en/appetizer_help.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Appetizer Help\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-12-02 16:26+0000\n"
+"POT-Creation-Date: 2008-12-07 14:53+0000\n"
 "PO-Revision-Date: 2008-11-09 18:36-0000\n"
 "Last-Translator: Laurent Cozic\n"
 "Language-Team: Appetizer Project\n"
@@ -288,7 +288,7 @@ msgid "Open the [#Configuring Configuration dialog]."
 msgstr ""
 
 #: generate_help\main.cpp:249
-msgid "Open the 'Plugin' tab."
+msgid "Open the 'Plugins' tab."
 msgstr ""
 
 #: generate_help\main.cpp:250
@@ -481,21 +481,9 @@ msgstr ""
 msgid "Official home page: %s"
 msgstr ""
 
-#: generate_help\main.cpp:350
-#, c-format
-msgid "Project home page: %s"
-msgstr ""
-
 #: generate_help\main.cpp:351
 #, c-format
 msgid "Some information on how to create a plugin: %s"
-msgstr ""
-
-#: generate_help\main.cpp:352
-#, c-format
-msgid ""
-"Beta versions and preleases are usually on [%s PortableApps Beta Testing "
-"forum]"
 msgstr ""
 
 #: generate_help\main.cpp:353
